--- a/index-Copy1.ipynb
+++ b/index-Copy1.ipynb
@@ -102,12 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def factorial(n):\n",
-    "    None"
+    "    total = 1\n",
+    "    while n>0:\n",
+    "        total *= n\n",
+    "        n -= 1\n",
+    "    return int(total)"
    ]
   },
   {
@@ -119,11 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2432902008176640000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None"
+    "factorial(20)"
    ]
   },
   {
@@ -135,13 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2432902008176640000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math \n",
     "\n",
-    "None"
+    "math.factorial(20)"
    ]
   },
   {
@@ -169,31 +195,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "app_num = None\n",
+    "app_num = math.factorial(6)\n",
     "app_num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "app_denom = None\n",
+    "app_denom = (math.factorial(3))**2\n",
     "app_denom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "app_total = None\n",
+    "app_total = app_num/app_denom\n",
     "app_total"
    ]
   },
@@ -222,11 +281,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "denom_phone = None\n",
+    "denom_phone = 100000\n",
     "denom_phone"
    ]
   },
@@ -239,22 +309,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "numer_phone = None\n",
+    "numer_phone = 5\n",
     "numer_phone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.00005'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prob_unlock = numer_phone/denom_phone\n",
+    "(f\"{prob_unlock:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob_unlock = None\n",
-    "prob_unlock"
+    "import pandas as pd\n",
+    "pd.options.display.float_format = '{:.2f}'.format"
    ]
   },
   {
@@ -266,31 +368,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "denom_phone_smudge = None #or math.factorial(4)\n",
+    "denom_phone_smudge = math.factorial(4)\n",
     "denom_phone_smudge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "numer_phone_smudge = None\n",
+    "numer_phone_smudge = 5\n",
     "numer_phone_smudge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.20833333333333334"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_unlock_smudge = None\n",
+    "prob_unlock_smudge = numer_phone_smudge/denom_phone_smudge\n",
     "prob_unlock_smudge"
    ]
   },
@@ -306,31 +441,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "denom_phone_smudge_2 = None #or use math.factorial(4)\n",
+    "denom_phone_smudge_2 = (3*(math.factorial(4))/2)\n",
+    "# ((4*3*2*1)/(((2*1)*1*1))) + ((4*3*2*1)/((1*(2*1)*1))) + ((4*3*2*1)/(1*1*(2*1)))\n",
     "denom_phone_smudge_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "numer_phone_smudge_2 = None \n",
+    "numer_phone_smudge_2 = 5 \n",
     "numer_phone_smudge_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1388888888888889"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_unlock_smudge_2 = None\n",
+    "prob_unlock_smudge_2 = numer_phone_smudge_2/denom_phone_smudge_2\n",
     "prob_unlock_smudge_2"
    ]
   },
@@ -364,11 +533,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7776"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sample_space_fh = None\n",
+    "sample_space_fh = 6**5\n",
     "sample_space_fh"
    ]
   },
@@ -395,17 +575,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ways_to_throw_given_fh= None # permutation with repetitions\n",
+    "# 5!/(3!2!) (roles!/(sixes!*fours!))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ways_to_throw_given_fh = math.factorial(5)/(math.factorial(3)*math.factorial(2))\n",
     "ways_to_throw_given_fh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "diff_fhses = None\n",
+    "diff_fhses = (math.factorial(6))/(math.factorial((6-2)))\n",
     "diff_fhses"
    ]
   },
@@ -418,11 +629,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "event_space_fh =  None\n",
+    "event_space_fh =  ways_to_throw_given_fh*diff_fhses\n",
     "event_space_fh"
    ]
   },
@@ -435,11 +657,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.038580246913580245"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_fh = None\n",
+    "prob_fh = event_space_fh/sample_space_fh\n",
     "\n",
     "prob_fh"
    ]
